# mimosa

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c  main.h
business/: CMakeLists.txt  model.h
tests/: CMakeLists.txt
